# Docs

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  versions.json
docs/: index.md
docs/market/: index.md
docs/mobile/: index.md
docs/server/: index.md
docs/server/models/: address.md  addressesList.md  problemDetails.md  problemDetails400.md  problemDetails404.md
docs/server/modules/addresses/: create.md  index.md  list.md
docs/server/modules/cities/: index.md
docs/server/modules/clients/: index.md
docs/server/modules/movementStatuses/: index.md
docs/server/modules/orders/: index.md
docs/server/modules/priceTypes/: index.md
docs/server/modules/productCategories/: index.md
docs/server/modules/products/: index.md
docs/server/modules/shipments/: index.md
docs/web/: index.md
market/: index.html
mobile/: index.html
search/: search_index.json
server/: index.html
server/models/address/: index.html
server/models/addressesList/: index.html
server/models/problemDetails400/: index.html
server/models/problemDetails404/: index.html
server/models/problemDetails500/: index.html
server/modules/addresses/: index.html
server/modules/addresses/create/: index.html
server/modules/cities/: index.html
server/modules/clients/: index.html
server/modules/movementStatuses/: index.html
server/modules/orders/: index.html
server/modules/priceTypes/: index.html
server/modules/productCategories/: index.html
server/modules/products/: index.html
server/modules/shipments/: index.html
web/: index.html
(+32 files in other folders)
